--- a/project/index.html
+++ b/project/index.html
@@ -254,6 +254,49 @@ function createHead() {
     head.add(hair);
     return head;
 }
+
+function createBody() {
+    var body = new THREE.Group();
+
+    // torse
+    var geometry = new THREE.BoxGeometry( 8, 4, 4);
+    var material = new THREE.MeshBasicMaterial( {color: 0xff0000} );
+    var torse = new THREE.Mesh( geometry, material );
+    torse.rotation.z = Math.PI/2;
+    torse.scale.set(2,2,2);
+    body.add(torse);
+
+    // dress
+    var points = [];
+    for (var i = 0; i < 10; i++) {
+    points.push(new THREE.Vector2(Math.cos(i * 0.2) * 3 + 3, (i - 5) * 0.8));
+    }
+    var latheGeometry = new THREE.LatheGeometry(points);
+    var dress = new THREE.Mesh( latheGeometry, material );
+    dress.scale.set(1.5, 3.5, 1.5);
+    dress.position.y = -10;
+    body.add(dress);
+
+    // 1st forearm
+    var forearmGeometry = new THREE.CylinderGeometry( 2, 2, 20, 50 );
+    var forearm1 = new THREE.Mesh( forearmGeometry, material );
+    forearm1.position.x = 40;
+    forearm1.rotation.z = -0.5;
+    body.add(forearm1);
+
+    // 2nd forearm
+    var forearm2 = new THREE.Mesh( forearmGeometry, material );
+    body.add(forearm2);
+
+    // 1st arm
+    var arm1 = new THREE.Mesh( forearmGeometry, material );
+    arm1.scale.set(1, 0.3, 1);
+    arm1.rotation.z = Math.PI/2;
+    arm1.position.set(7, 6, 0);
+    body.add(arm1);
+
+    return body;
+}
 function createLathe() {
     const points = [];
     for (var i = 0; i < 5; i+=0.5) {
@@ -538,6 +581,11 @@ function makeStone() {
     var head1 = createHead();
     head1.position.x = 70;
     sceneGraph.add(head1);
+
+    var body1 = createBody();
+    body1.position.x = 70;
+    body1.position.y = -20;
+    sceneGraph.add(body1);
 
 
     /*
